--- a/mySite/templates/search-result-channels.html
+++ b/mySite/templates/search-result-channels.html
@@ -23,25 +23,55 @@
 
         <template id="search-template">
             <div>
-                <h1>You searched for "{{ searched }}" </h1>
-                {% if channels %}
                 <div>
-                    <h2 class="mt-5">Channels</h2>
-                    <v-row class="my-5">
-                        {% for channel in channels %}
-                        <v-col cols="6" sm="4" md="2" >
-                            <channel-card
-                                id="{{ channel.id }}"
-                                profilepic="{{ channel.profilePic }}"
-                                name="{{ channel.name }}"
-                                subscribercount="{{ channel.subscriberCount }}"
-                            ></channel-card>
+                    <h1>You searched for "{{ searched }}" </h1>
+                    {% if channels %}
+                    <div>
+                        <h2 class="mt-5">Channels</h2>
+                        <v-row class="my-5">
+                            {% for channel in channels %}
+                            <v-col cols="6" sm="4" md="2" >
+                                <channel-card
+                                    id="{{ channel.id }}"
+                                    profilepic="{{ channel.profilePic }}"
+                                    name="{{ channel.name }}"
+                                    subscribercount="{{ channel.subscriberCount }}"
+                                ></channel-card>
+                            </v-col>
+                            {% endfor %}
+                        </v-row>
+                    </div>
+                    {% else %}
+                    <h2 class="mt-5">No channel found!</h2>
+                    {% endif %}
+                </div>
+                {% if maxLength > 1 %}                   
+                <div>
+                    <v-row>
+                        <v-col cols="12" md="10">
+                            <div>
+                                <v-pagination
+                                    v-model="page"
+                                    :length="{{ maxLength }}"
+                                    :total-visible="14"
+                                    @input="paginate"
+                                ></v-pagination>
+                            </div>
                         </v-col>
-                        {% endfor %}
+                        <v-col cols="12" md="2">
+                            <v-input>
+                                <v-text-field
+                                    v-model="pageField"
+                                    label="Jump to"
+                                    outlined
+                                    dense
+                                    type="number"
+                                    @keyup.enter="paginateFromField"
+                                ></v-text-field>
+                            </v-input>
+                        </v-col>
                     </v-row>
                 </div>
-                {% else %}
-                <h2 class="mt-5">No channel found!</h2>
                 {% endif %}
             </div>
         </template>
@@ -53,6 +83,52 @@
         <script>
             const SearchChannel = Vue.component('search-channel', {
                 template: '#search-template',
+                data() {
+                    return {
+                        page: Number.parseInt("{{ page }}"),
+                        pageField: Number.parseInt("{{ page }}"),
+                    }
+                },
+                methods: {
+                    paginate() {
+                        var url = '/search-channels/page/' + this.page
+                        var form = document.createElement('form')
+                        form.innerHTML = `{% csrf_token %}`
+                        form.setAttribute('method', "POST")
+                        form.setAttribute('action', url)
+                        form.setAttribute('name', 'searched')
+                        
+                        const searched = document.createElement('input')
+                        searched.setAttribute('type', 'hidden')
+                        searched.setAttribute('name', 'searched')
+                        searched.setAttribute('value', '{{ searched }}')
+                        form.appendChild(searched)
+
+                        document.body.append(form)
+                        form.submit();
+                    },
+                    paginateFromField() {
+                        if (this.pageField <= Number.parseInt("{{ maxLength }}")) {
+                            var url = '/search-channels/page/' + this.pageField
+                            var form = document.createElement('form')
+                            form.innerHTML = `{% csrf_token %}`
+                            form.setAttribute('method', "POST")
+                            form.setAttribute('action', url)
+                            form.setAttribute('name', 'searched')
+                            
+                            const searched = document.createElement('input')
+                            searched.setAttribute('type', 'hidden')
+                            searched.setAttribute('name', 'searched')
+                            searched.setAttribute('value', '{{ searched }}')
+                            form.appendChild(searched)
+
+                            document.body.append(form)
+                            form.submit();
+                        } else {
+                            window.alert("There are only {{ maxLength }} pages!")
+                        }
+                    }
+                },
             })
 
             const app = new Vue({
