--- a/mySite/templates/video-details.html
+++ b/mySite/templates/video-details.html
@@ -129,7 +129,7 @@
                         <v-card class="rounded-xl">
                             <v-card-title>Comments</v-card-title>
                             <v-divider></v-divider>
-                            {% if videos.comments %}
+                            {% if not videos.comments %}
                             {% for comment in video.comments %}
                             <v-card-text>
                                 {{ comment | linebreaksbr }}
