--- a/mySite/templates/video-details.html
+++ b/mySite/templates/video-details.html
@@ -11,7 +11,7 @@
         <div id="app">
             <v-app>
                 <v-main>
-                    <toolbar searchtype="video">
+                    <toolbar>>
                         <span slot="token">{% csrf_token %}</span>
                     </toolbar>
                     <v-container>
