--- a/mySite/templates/channel-details.html
+++ b/mySite/templates/channel-details.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+        <link href="{% static 'styles.css' %}" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     </head>
     <body>
@@ -23,7 +24,7 @@
 
         <template id="channel-details-card-template">
             <div>
-                <v-card class="rounded-xl">
+                <v-card class="rounded-lg" height="300px">
                     <v-card-title>
                         <v-list-item-icon>
                             <v-img height="100%" src="{{channel.profilePic}}"></v-img>
@@ -79,7 +80,7 @@
                         <div style="position: sticky; top: 76px">
                             <channel-details-card class='mt-5'>
                             </channel-details-card>
-                            <v-card class="mt-5 rounded-xl">
+                            <v-card class="mt-5 rounded-lg">
                                 <v-card-title>
                                     Description
                                 </v-card-title>
@@ -123,7 +124,7 @@
             })
 
             const app = new Vue({
-                vuetify: new Vuetify(),
+                vuetify: new Vuetify(theme),
             }).$mount('#app');
         </script>
     </body>
