--- a/mySite/templates/channels.html
+++ b/mySite/templates/channels.html
@@ -5,6 +5,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+        <link href="{% static 'styles.css' %}" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     </head>
     <body>
@@ -94,7 +95,7 @@
             })
 
             const app = new Vue({
-                vuetify: new Vuetify(),
+                vuetify: new Vuetify(theme),
             }).$mount('#app');
         </script>
     </body>
