--- a/mySite/templates/video-details.html
+++ b/mySite/templates/video-details.html
@@ -27,7 +27,7 @@
                 <v-card class="rounded-lg">
                     <v-card-title>
                         <v-list-item-icon>
-                            <v-img height="100%" src="{{channel.profilePic}}"></v-img>
+                            <v-img class="rounded-lg" height="100%" src="{{channel.profilePic}}"></v-img>
                         </v-list-item-icon>
                         <v-list-item-content>
                             <a class="text-truncate" href="/channel/{{channel.id}}">{{ channel.name }}</a>
