adjust video details card height

--- a/mySite/templates/video-details.html
+++ b/mySite/templates/video-details.html
@@ -24,7 +24,7 @@
 
         <template id="video-details-card-template">
             <div>
-                <v-card class="rounded-lg">
+                <v-card class="rounded-lg" height="380px">
                     <v-card-title>
                         <v-list-item-icon>
                             <v-img class="rounded-lg" height="100%" src="{{channel.profilePic}}"></v-img>
