--- a/mySite/templates/search-result-videos.html
+++ b/mySite/templates/search-result-videos.html
@@ -18,6 +18,7 @@
                     <v-container>
                         <search-video></search-video>
                     </v-container>
+                    <page-footer absolute bottom></page-footer>
                 </v-main>
             </v-app>
         </div>
