--- a/mySite/templates/channel-details.html
+++ b/mySite/templates/channel-details.html
@@ -18,6 +18,7 @@
                     <v-container>
                         <channel-details></channels-details>
                     </v-container>
+                    <page-footer></page-footer>
                 </v-main>
             </v-app>
         </div>
