--- a/mySite/templates/search-result-channels.html
+++ b/mySite/templates/search-result-channels.html
@@ -18,6 +18,7 @@
                     <v-container>
                         <search-channel></search-channel>
                     </v-container>
+                    <page-footer></page-footer>
                 </v-main>
             </v-app>
         </div>
