--- a/mySite/templates/search-result-channels.html
+++ b/mySite/templates/search-result-channels.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -37,7 +38,7 @@
                                     id="{{ channel.id }}"
                                     profilepic="{{ channel.profilePic }}"
                                     name="{{ channel.name }}"
-                                    subscribercount="{{ channel.subscriberCount }}"
+                                    subscribercount="{{ channel.subscriberCount | intcomma }}"
                                 ></channel-card>
                             </v-col>
                             {% endfor %}
