--- a/mySite/templates/search-result-videos.html
+++ b/mySite/templates/search-result-videos.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -37,7 +38,7 @@
                                     id="{{ video.id|safe }}"
                                     thumbnail="{{ video.videoThumbnail|safe }}"
                                     title="{{ video.title }}"
-                                    date="{{ video.datePublished|date }}"
+                                    views="{{ video.interactionCount | intcomma }}"
                                 ></video-card>
                             </v-col>
                             {% endfor %}
