--- a/mySite/templates/videos.html
+++ b/mySite/templates/videos.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load humanize %}
 <!DOCTYPE html>
 <html>
     <head>
@@ -34,7 +35,7 @@
                                 id="{{ video.id|safe }}"
                                 thumbnail="{{ video.videoThumbnail|safe }}"
                                 title="{{ video.title }}"
-                                date="{{ video.datePublished|date }}"
+                                views="{{ video.interactionCount | intcomma }}"
                             ></video-card>
                         </v-col>
                         {% endfor %}
