show subscriber count of video creator in video

--- a/mySite/templates/video-details.html
+++ b/mySite/templates/video-details.html
@@ -33,6 +33,7 @@
                         </v-list-item-icon>
                         <v-list-item-content>
                             <a class="text-truncate" href="/channel/{{channel.id}}">{{ channel.name }}</a>
+                            <v-list-item-subtitle>{{ channel.subscriberCount }} subscribers</v-list-item-subtitle>
                         </v-list-item-content>
                     </v-card-title>
                     <v-divider></v-divider>
