because Tsinghua ren love purple

--- a/mySite/templates/channel-details.html
+++ b/mySite/templates/channel-details.html
@@ -26,7 +26,7 @@
 
         <template id="channel-details-card-template">
             <div>
-                <v-card class="rounded-lg" height="300px">
+                <v-card class="rounded-lg" color="#290c7a" height="300px">
                     <v-card-title>
                         <v-list-item-icon>
                             <v-img class="rounded-lg" height="100%" src="{{channel.profilePic}}"></v-img>
@@ -82,7 +82,7 @@
                         <div style="position: sticky; top: 76px">
                             <channel-details-card class='mt-5'>
                             </channel-details-card>
-                            <v-card class="mt-5 rounded-lg">
+                            <v-card class="mt-5 rounded-lg" color="#290c7a">
                                 <v-card-title>
                                     Description
                                 </v-card-title>
