--- a/mySite/templates/video-details.html
+++ b/mySite/templates/video-details.html
@@ -26,7 +26,7 @@
 
         <template id="video-details-card-template">
             <div>
-                <v-card class="rounded-lg" height="380px">
+                <v-card class="rounded-lg" color="#290c7a" height="380px">
                     <v-card-title>
                         <v-list-item-icon>
                             <v-img class="rounded-lg" height="100%" src="{{channel.profilePic}}"></v-img>
@@ -119,7 +119,7 @@
                 </v-row>
                 <v-row>
                     <v-col cols="12">
-                        <v-card class="rounded-lg">
+                        <v-card class="rounded-lg" color="#290c7a">
                             <v-card-title>Description</v-card-title>
                             <v-divider></v-divider>
                             <v-card-text>
@@ -130,7 +130,7 @@
                 </v-row>
                 <v-row>
                     <v-col>
-                        <v-card class="rounded-lg">
+                        <v-card class="rounded-lg" color="#290c7a">
                             <v-card-title>Comments</v-card-title>
                             {% if video.comments %}
                             {% for comment in video.comments %}
