--- a/mySite/templates/channel-details.html
+++ b/mySite/templates/channel-details.html
@@ -88,7 +88,11 @@
                                 </v-card-title>
                                 <v-divider></v-divider>
                                 <v-card-text>
+                                    {% if channel.description %}
                                     {{ channel.description | linebreaksbr }}
+                                    {% else %}
+                                    No description
+                                    {% endif %}
                                 </v-card-text>
                             </v-card>
                         </div>
