remove useless prop

--- a/mySite/templates/search-result-videos.html
+++ b/mySite/templates/search-result-videos.html
@@ -19,7 +19,7 @@
                     <v-container>
                         <search-video></search-video>
                     </v-container>
-                    <page-footer absolute bottom></page-footer>
+                    <page-footer></page-footer>
                 </v-main>
             </v-app>
         </div>
