--- a/mySite/templates/search-result-channels.html
+++ b/mySite/templates/search-result-channels.html
@@ -28,7 +28,7 @@
             <div>
                 <div>
                     <h1>You searched for "{{ searched }}" </h1>
-                    <p>{{ totalChannels }} result(s) in {{ timeUsed }} seconds.</p>
+                    <p>{{ totalChannels }} result(s) in {{ timeUsed }} second(s).</p>
                     {% if totalChannels > 0 %}
                     <div>
                         <h2 class="mt-5">Channels</h2>
