--- a/mySite/templates/error.html
+++ b/mySite/templates/error.html
@@ -18,7 +18,7 @@
                     </toolbar>
                     <v-container>
                         <div>
-                            <h1>Whoops! This page does not exist!</h1>
+                            <h1>{{ error }}</h1>
                         </div>
                     </v-container>
                     <page-footer></page-footer>
