--- a/mySite/templates/videos.html
+++ b/mySite/templates/videos.html
@@ -84,11 +84,11 @@
                 },
                 methods: {
                     paginate() {
-                        window.location.href = '/page/' + this.page
+                        window.location.href = '/page' + this.page
                     },
                     paginateFromField() {
                         if (this.pageField <= Number.parseInt("{{ maxLength }}")) {
-                            window.location.href = '/page/' + this.pageField
+                            window.location.href = '/page' + this.pageField
                         } else {
                             window.alert("There are only {{ maxLength }} pages!")
                         }
